test/parser/should_succeed/var.souc
import Hue

main() = do
    x <- 42
    print x
