test/parser/should_fail/expr2.souc
import Import

main() = do
    print x <> huaens <>
end main
